# INFOTAXTASK

./: .gitignore  CMakeLists.txt  README.md  ТестовоеЗадание.txt
Task/: CMakeLists.txt
Task/Src/: CMakeLists.txt
Task/Src/ConsoleApp/: CMakeLists.txt  MainFlow.cpp  WorkFlow.cpp  WorkFlow.h
Task/Src/TestUser/: CMakeLists.txt  UserTest.cpp
Task/Src/User/: CMakeLists.txt  UserTest.cpp
Task/Tests/: CMakeLists.txt  Test.cpp  Test.h  TestLog.cpp  TestLog.h  TestRunner.cpp  TestWorkFlow.cpp  TestWorkFlow.h
build-shared/: CMakeCache.txt  Makefile  cmake_install.cmake
build-shared/Task/: Makefile  cmake_install.cmake
build-shared/Task/Src/: Makefile  cmake_install.cmake
build-shared/Task/Src/ConsoleApp/: Makefile  cmake_install.cmake
build-shared/Task/Src/User/: Makefile  cmake_install.cmake
build-shared/lib/: libLibrary.dylib
